[tool.poetry]
name = "weni-feature-flags"
version = "0.1.0"
description = "Weni's feature flags SDK for Python backends"
authors = ["Kallil Souza dos Santos <kallilsouza@hotmail.com>"]
readme = "README.md"
packages = [{ include = "weni_feature_flags" }]

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.0.4"
requests = "^2.31.0"
djangorestframework = "^3.13.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-django = "^4.5.0"
black = "^23.0.0"
flake8 = "^4.0.1"
ipython = "^8.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
