[tool.black]
exclude = '''
/(
  | migrations
)/
'''

[tool.isort]
profile = "black"
skip_glob = ["*/migrations/*"]

[tool.poetry]
name = "weni-feature-flags"
version = "0.1.4a1"
description = "Weni's feature flags SDK for Python backends"
authors = ["Kallil Souza dos Santos <kallilsouza@hotmail.com>"]
readme = "README.md"
packages = [{ include = "weni_feature_flags" }]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
django = ">=3.2.22,<6.0"
requests = ">=2.25.0,<3.0"
djangorestframework = ">=3.12.0,<4.0"
growthbook = ">=1.0.0,<2.0"
django-redis = ">=4.0.0,<6.0"
celery = ">=5.0.0,<6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-django = "^4.5.0"
black = "^23.0.0"
flake8 = "^3.7.7"
ipython = "^8.12.0"
isort = "5.12.0"
coverage = "^7.2.2"

[tool.flake8]
max-line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
